package br.unitins.topicos1.floricultura.dto;

public record EntregadorDTO(
    String cnpj,
    String cnh,
    Long usuario
) {
    
}
